--- a/index.html
+++ b/index.html
@@ -18,165 +18,189 @@
     />
   </head>
   <body>
-    <header>
-      <!-- Header navigation -->
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-header">Studio</span></a
-        >
-        <ul class="list">
-          <li><a class="link nav-link" href="./index.html">Studio</a></li>
-          <li>
-            <a class="link nav-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="link nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <!-- Contacts -->
-      <address class="contact">
-        <ul class="list">
-          <li>
-            <a class="link contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link contact" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <!-- Header navigation -->
+    <header class="header-section">
+      <div class="container header-container">
+        <nav class="navigation">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <ul class="list menu-list">
+            <li class="menu-item">
+              <a class="link nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="link nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="link nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contacts -->
+        <address class="address">
+          <ul class="list menu-list">
+            <li class="menu-item">
+              <a class="link contact-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="menu-item">
+              <a class="link contact-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Hero section -->
-      <section class="hero-section">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+      <section class="section hero-section">
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
-      <section>
-        <!-- Second section -->
-        <h2 hidden class="title">List of possibilities</h2>
-        <ul class="list">
-          <li>
-            <h3 class="title">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <!-- Second section -->
+      <section class="section">
+        <div class="container">
+          <h2 hidden class="title">List of possibilities</h2>
+          <ul class="list list-possibilities">
+            <li class="item">
+              <h3 class="subtitle">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="subtitle">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="subtitle">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="subtitle">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Third section -->
-      <section>
-        <h2 class="secondary-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              class="hero-img"
-              src="./images/studio/computer-screen.jpg"
-              alt="White computer"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              class="hero-img"
-              src="./images/studio/phone.jpg"
-              alt="Сhat on the phone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              class="hero-img"
-              src="./images/studio/phone-in-hand.jpg"
-              alt="Phone with program in hand"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="title">What are we doing</h2>
+          <ul class="list pictures-list">
+            <li class="picture">
+              <img
+                class="hero-img"
+                src="./images/studio/computer-screen.jpg"
+                alt="White computer"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="picture">
+              <img
+                class="hero-img"
+                src="./images/studio/phone.jpg"
+                alt="Сhat on the phone"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="picture">
+              <img
+                class="hero-img"
+                src="./images/studio/phone-in-hand.jpg"
+                alt="Phone with program in hand"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Fourth section -->
-      <section class="team-section">
-        <h2 class="secondary-title">Our Team</h2>
-        <ul class="list">
-          <li class="card">
-            <img
-              src="./images/studio/portrait-mark.jpg"
-              alt="Portrait of Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/studio/portrait-tom.jpg"
-              alt="Portrait of Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/studio/portrait-camila.jpg"
-              alt="Portrait of Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/studio/portrait-daniel.jpg"
-              alt="Portrait of Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team-section section">
+        <div class="container">
+          <h2 class="title">Our Team</h2>
+          <ul class="list list-card">
+            <li class="card">
+              <img
+                src="./images/studio/portrait-mark.jpg"
+                alt="Portrait of Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="user">
+                <h3 class="subtitle">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/studio/portrait-tom.jpg"
+                alt="Portrait of Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="user">
+                <h3 class="subtitle">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/studio/portrait-camila.jpg"
+                alt="Portrait of Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="user">
+                <h3 class="subtitle">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/studio/portrait-daniel.jpg"
+                alt="Portrait of Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="user">
+                <h3 class="subtitle">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-backround">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer-section section">
+      <div class="container footer-container">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
