--- a/portfolio.html
+++ b/portfolio.html
@@ -19,168 +19,188 @@
   </head>
   <body>
     <!-- Header navigation -->
-    <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-header">Studio</span></a
-        >
-        <ul class="list">
-          <li><a class="link nav-link" href="./index.html">Studio</a></li>
-          <li>
-            <a class="link nav-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="link nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <!-- Contacts -->
-      <address class="contact">
-        <ul class="list">
-          <li>
-            <a class="link contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link contact" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header-section">
+      <div class="container header-container">
+        <nav class="navigation">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <ul class="list menu-list">
+            <li class="menu-item">
+              <a class="link nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="link nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="link nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contacts -->
+        <address class="address">
+          <ul class="list menu-list">
+            <li class="menu-item">
+              <a class="link contact-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="menu-item">
+              <a class="link contact-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Button list -->
-      <section>
-        <h1 hidden>List of possibilities</h1>
-        <ul class="list">
-          <li><button class="btn" type="button">All</button></li>
-          <li><button class="btn" type="button">Web Site</button></li>
-          <li><button class="btn" type="button">App</button></li>
-          <li><button class="btn" type="button">Design</button></li>
-          <li><button class="btn" type="button">Marketing</button></li>
-        </ul>
-        <!-- Images list-->
-        <ul class="list">
-          <li class="hero-img">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/interface-concept.jpg"
-                alt="Interface concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Banking App Interface Concept</h2>
-              <p class="text">App</p>
-            </a>
-          </li>
-          <li class="hero-img">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/phone.jpg"
-                alt="Phone payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Cashless Payment</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li class="hero-img">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/devices.jpg"
-                alt="Phone and laptop"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Meditation App</h2>
-              <p class="text">App</p>
-            </a>
-          </li>
-          <li class="hero-img">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/helm.jpg"
-                alt="Driver and helm"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Taxi Service</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li class="hero-img">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/screen.jpg"
-                alt="Phone screen"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Screen Illustrations</h2>
-              <p class="text">Design</p>
-            </a>
-          </li>
-          <li class="hero-img">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/girl.jpg"
-                alt="Girl with phone and headphone"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Online Courses</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li class="hero-img">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/stories-concept.jpg"
-                alt="Stories concept for Instagram"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Instagram Stories Concept</h2>
-              <p class="text">Design</p>
-            </a>
-          </li>
-          <li class="hero-img">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/fruits.jpg"
-                alt="Bag with fruits"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Organic Food</h2>
-              <p class="text">Web Site</p>
-            </a>
-          </li>
-          <li class="hero-img">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/coffee.jpg"
-                alt="Cup of coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Fresh Coffee</h2>
-              <p class="text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+      <section class="section section-portfolio">
+        <div class="container">
+          <h1 hidden>List of possibilities</h1>
+          <ul class="list btn-list">
+            <li class="btn-item">
+              <button class="btn" type="button">All</button>
+            </li>
+            <li class="btn-item">
+              <button class="btn" type="button">Web Site</button>
+            </li>
+            <li class="btn-item">
+              <button class="btn" type="button">App</button>
+            </li>
+            <li class="btn-item">
+              <button class="btn" type="button">Design</button>
+            </li>
+            <li class="btn-item">
+              <button class="btn" type="button">Marketing</button>
+            </li>
+          </ul>
+          <!-- Images list-->
+          <ul class="list list-img">
+            <li class="img">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/interface-concept.jpg"
+                  alt="Interface concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="desc"><h2 class="subtitle">Banking App Interface Concept</h2>
+                <p class="text">App</p></div>
+              </a>
+            </li>
+            <li class="img">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/phone.jpg"
+                  alt="Phone payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="desc"><h2 class="subtitle">Cashless Payment</h2>
+                <p class="text">Marketing</p></div>
+              </a>
+            </li>
+            <li class="img">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/devices.jpg"
+                  alt="Phone and laptop"
+                  width="360"
+                  height="300"
+                />
+                <div class="desc"><h2 class="subtitle">Meditation App</h2>
+                <p class="text">App</p></div>
+              </a>
+            </li>
+            <li class="img">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/helm.jpg"
+                  alt="Driver and helm"
+                  width="360"
+                  height="300"
+                />
+                <div class="desc"><h2 class="subtitle">Taxi Service</h2>
+                <p class="text">Marketing</p></div>
+              </a>
+            </li>
+            <li class="img">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/screen.jpg"
+                  alt="Phone screen"
+                  width="360"
+                  height="300"
+                />
+                <div class="desc"><h2 class="subtitle">Screen Illustrations</h2>
+                <p class="text">Design</p></div>
+              </a>
+            </li>
+            <li class="img">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/girl.jpg"
+                  alt="Girl with phone and headphone"
+                  width="360"
+                  height="300"
+                />
+                <div class="desc"><h2 class="subtitle">Online Courses</h2>
+                <p class="text">Marketing</p></div>
+              </a>
+            </li>
+            <li class="img">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/stories-concept.jpg"
+                  alt="Stories concept for Instagram"
+                  width="360"
+                  height="300"
+                />
+                <div class="desc"><h2 class="subtitle">Instagram Stories Concept</h2>
+                <p class="text">Design</p></div>
+              </a>
+            </li>
+            <li class="img">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/fruits.jpg"
+                  alt="Bag with fruits"
+                  width="360"
+                  height="300"
+                />
+                <div class="desc"><h2 class="subtitle">Organic Food</h2>
+                <p class="text">Web Site</p>
+              </a></div>
+            </li>
+            <li class="img">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/coffee.jpg"
+                  alt="Cup of coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="desc"><h2 class="subtitle">Fresh Coffee</h2>
+                <p class="text">Web Site</p></div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-backround">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer-section section">
+      <div class="container footer-container">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
