--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- Second section -->
       <section class="section">
         <div class="container">
-          <h2 hidden class="title">List of possibilities</h2>
+          <h2 hidden class="title .visually-hidden">List of possibilities</h2>
           <ul class="list list-possibilities">
             <li class="item">
               <h3 class="subtitle">Strategy</h3>
@@ -99,7 +99,7 @@
         </div>
       </section>
       <!-- Third section -->
-      <section class="section">
+      <section class="section second-section">
         <div class="container">
           <h2 class="title">What are we doing</h2>
           <ul class="list pictures-list">
