--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
       <!-- Button list -->
       <section class="section section-portfolio">
         <div class="container">
-          <h1 hidden>List of possibilities</h1>
+          <h1 hidden class="visually-hidden">List of possibilities</h1>
           <ul class="list btn-list">
             <li class="btn-item">
               <button class="btn" type="button">All</button>
@@ -77,8 +77,8 @@
             </li>
           </ul>
           <!-- Images list-->
-          <ul class="list list-img">
-            <li class="img">
+          <ul class="list list-img-card">
+            <li class="img-card">
               <a class="link" href="">
                 <img
                   src="./images/portfolio/interface-concept.jpg"
@@ -90,7 +90,7 @@
                 <p class="text">App</p></div>
               </a>
             </li>
-            <li class="img">
+            <li class="img-card">
               <a class="link" href="">
                 <img
                   src="./images/portfolio/phone.jpg"
@@ -102,7 +102,7 @@
                 <p class="text">Marketing</p></div>
               </a>
             </li>
-            <li class="img">
+            <li class="img-card">
               <a class="link" href="">
                 <img
                   src="./images/portfolio/devices.jpg"
@@ -114,7 +114,7 @@
                 <p class="text">App</p></div>
               </a>
             </li>
-            <li class="img">
+            <li class="img-card">
               <a class="link" href="">
                 <img
                   src="./images/portfolio/helm.jpg"
@@ -126,7 +126,7 @@
                 <p class="text">Marketing</p></div>
               </a>
             </li>
-            <li class="img">
+            <li class="img-card">
               <a class="link" href="">
                 <img
                   src="./images/portfolio/screen.jpg"
@@ -138,7 +138,7 @@
                 <p class="text">Design</p></div>
               </a>
             </li>
-            <li class="img">
+            <li class="img-card">
               <a class="link" href="">
                 <img
                   src="./images/portfolio/girl.jpg"
@@ -150,7 +150,7 @@
                 <p class="text">Marketing</p></div>
               </a>
             </li>
-            <li class="img">
+            <li class="img-card">
               <a class="link" href="">
                 <img
                   src="./images/portfolio/stories-concept.jpg"
@@ -162,7 +162,7 @@
                 <p class="text">Design</p></div>
               </a>
             </li>
-            <li class="img">
+            <li class="img-card">
               <a class="link" href="">
                 <img
                   src="./images/portfolio/fruits.jpg"
@@ -174,7 +174,7 @@
                 <p class="text">Web Site</p>
               </a></div>
             </li>
-            <li class="img">
+            <li class="img-card">
               <a class="link" href="">
                 <img
                   src="./images/portfolio/coffee.jpg"
