--- a/portfolio.html
+++ b/portfolio.html
@@ -86,8 +86,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="desc"><h2 class="subtitle">Banking App Interface Concept</h2>
-                <p class="text">App</p></div>
+                <div class="desc">
+                  <h2 class="subtitle">Banking App Interface Concept</h2>
+                  <p class="text">App</p>
+                </div>
               </a>
             </li>
             <li class="img-card">
@@ -98,8 +100,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="desc"><h2 class="subtitle">Cashless Payment</h2>
-                <p class="text">Marketing</p></div>
+                <div class="desc">
+                  <h2 class="subtitle">Cashless Payment</h2>
+                  <p class="text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="img-card">
@@ -110,8 +114,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="desc"><h2 class="subtitle">Meditation App</h2>
-                <p class="text">App</p></div>
+                <div class="desc">
+                  <h2 class="subtitle">Meditation App</h2>
+                  <p class="text">App</p>
+                </div>
               </a>
             </li>
             <li class="img-card">
@@ -122,8 +128,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="desc"><h2 class="subtitle">Taxi Service</h2>
-                <p class="text">Marketing</p></div>
+                <div class="desc">
+                  <h2 class="subtitle">Taxi Service</h2>
+                  <p class="text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="img-card">
@@ -134,8 +142,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="desc"><h2 class="subtitle">Screen Illustrations</h2>
-                <p class="text">Design</p></div>
+                <div class="desc">
+                  <h2 class="subtitle">Screen Illustrations</h2>
+                  <p class="text">Design</p>
+                </div>
               </a>
             </li>
             <li class="img-card">
@@ -146,8 +156,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="desc"><h2 class="subtitle">Online Courses</h2>
-                <p class="text">Marketing</p></div>
+                <div class="desc">
+                  <h2 class="subtitle">Online Courses</h2>
+                  <p class="text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="img-card">
@@ -158,8 +170,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="desc"><h2 class="subtitle">Instagram Stories Concept</h2>
-                <p class="text">Design</p></div>
+                <div class="desc">
+                  <h2 class="subtitle">Instagram Stories Concept</h2>
+                  <p class="text">Design</p>
+                </div>
               </a>
             </li>
             <li class="img-card">
@@ -170,9 +184,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="desc"><h2 class="subtitle">Organic Food</h2>
-                <p class="text">Web Site</p>
-              </a></div>
+                <div class="desc">
+                  <h2 class="subtitle">Organic Food</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="img-card">
               <a class="link" href="">
@@ -182,8 +198,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="desc"><h2 class="subtitle">Fresh Coffee</h2>
-                <p class="text">Web Site</p></div>
+                <div class="desc">
+                  <h2 class="subtitle">Fresh Coffee</h2>
+                  <p class="text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
