--- a/portfolio.html
+++ b/portfolio.html
@@ -210,7 +210,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer-section section">
-      <div class="container footer-container">
+      <div class="container footer-link">
         <a class="logo" href="./index.html"
           >Web<span class="logo-footer">Studio</span></a
         >
