--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <!-- Footer -->
     <footer class="footer-section section">
       <div class="container footer-container">
-        <a class="logo" href="./index.html"
+        <a class="logo footer-link" href="./index.html"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-text">
